src/styles/app.scss
$theme-colors: (
  "primary": #ffb800,
);

@import "../../node_modules/bootstrap/scss/bootstrap";

* {
  padding: 0;
  margin: 0;
}

.mh-100vh {
  min-height: 100vh;
}

.flex-1 {
  flex: 1;
}

.signin-img {
  background-image: url(https://images.pexels.com/photos/7245366/pexels-photo-7245366.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
}

.img-overlay {
  position: relative;
  background-image: url(../assets/signin.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 5px;
    bottom: 0;
    background-color: rgba($color: #000000, $alpha: 0.3);
  }
}

.eventBox {
  min-width: 250px;
  margin: " 10px 10px";
  overflow-y: scroll;
  position: relative;
}
td {
  vertical-align: middle;
}

.main-img-container {
  background-image: url("../assets/main-image-container.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  min-height: 500px;
  position: relative;
  &:before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba($color: #000000, $alpha: 0.7);
    z-index: 0;
  }
  .content {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    z-index: 1;
  }
}
.about-img-container {
  background-image: url("../assets/about-img.png");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 400px;
  position: relative;
  background-position: center;
  &:before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba($color: #000000, $alpha: 0.4);
    z-index: 0;
  }
}

